# feishu-enhance-mcp

./: .gitignore  README.md  mcp_restart_config.json  mcp_restart_monitor.py  pyproject.toml  smithery.yaml  start_mcp.bat  start_mcp.sh
.github/workflows/: ci.yml  publish.yml
feishu_enhance_mcp/: __init__.py  server.py
lark_mcp/: __init__.py  message_processor.py  server.py
